# computer-dashboard

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: beepboop.rs  log.rs  main.rs
src/views/: cpu.rs  memory.rs  mod.rs  network.rs  setup.rs  storage.rs
