[package]
name = "computer-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"

[dependencies.cursive]
version = "0.19.0"
default-features = false
features = ["pancurses-backend"]